implements notification stuffs