@@ -75,7 +75,7 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return this.roles.stream().map(Role::name).map(SimpleGrantedAuthority::new).collect(toList());
+        return this.roles.stream().map(Role::name).map(SimpleGrantedAuthority::new).toList();
     }
 
     @Override
